# spp_v2

./: .env.example  .gitignore  KNOWLEDGE.md  README.md  docker-compose.yml  erd.md  extract_pdf_toc.py  pdf_extracted.txt  pyproject.toml  railway.json  toc_output.txt  vercel.json
.claude/: settings.local.json
backend/: .env.example  Procfile  add_german_columns.py  add_spanish_columns.py  nixpacks.toml  railway.json  requirements.txt  validate_db.py
backend/api/: __init__.py  dependencies.py  main.py
backend/api/routers/: data.py  metadata.py  system.py
backend/core/: __init__.py  config.py  processor.py
backend/data/geo/: geom_simple_maps.geojson
backend/data/raw/: NED (v.0.1).xlsx  SDI (v.1).xlsx  SED (v.0.1).xlsx  SEED SHINY (v.0.1).xlsx  SLED (v.0.1).xlsx  SLED_ARG.xlsx  SLED_mex.xlsx  SLED_mex_full.xlsx  SLED_plus_mex.xlsx  SLED_unified.xlsx  dict_new.xlsx  match_results_V2_checked.xlsx  match_results_approved.xlsx  party_colors.xlsx  party_colors_leg_v3.xlsx
backend/db/: __init__.py  models.py  session.py
backend/etl/: sled_arg_merge.py  sled_final_merge.py  sled_mex_expand.py
backend/etl/output/: SLED_enriched.xlsx  SLED_mex_expanded.xlsx  SLED_unified.xlsx  phase1_name_map.csv  phase2_consistency.xlsx  sled_mex_expansion_report.csv
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: ExploreToolsSwitcher.tsx  GlobalHeader.tsx  Layout.tsx
frontend/src/data/: methodology.ts
(+52 files in other folders)
