[project]
name = "spp-v2"
version = "0.1.0"
description = "Subnational Politics Project – v2 backend & data pipeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic-settings>=2.2",
    "pandas>=2.2",
    "openpyxl>=3.1",      # Excel I/O
    "pyarrow>=15.0",      # Parquet I/O
    "psycopg2-binary>=2.9",  # PostgreSQL driver (prod)
    "httpx>=0.27",        # async HTTP client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
